--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
 <html>
 <head>
-    <link rel="icon" type="image/png" href="./js-home/penis.png">
+    <link rel="icon" type="image/png" href="./js-home/penis-30.png">
     <title>Drochilo Ltd.</title>
 	<meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="styles-home/main.css" rel="stylesheet">
     <script src="js-home/particles.js"></script>
 </head>
-
 <body>
-    <div class="zoomIn animated" id="particles-js"><canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1366" height="362"></canvas></div>
-    <script src="js-home/particles-conf.js"></script>
-    <div class="flipInX animated" id="content">
-	<video id="round" preload="auto" autoplay loop muted width="250" height="250">
-   		 <source src="avatar.webm" type='video/webm;'>
- 	 </video>
-        
-        <div id="name">
-            Drochilo Ltd.
-        </div>
-        <nav class="fa">
-            <!-- <a class="fa-vk" href="#"></a> -->
-            <!-- <a class="fa-paper-plane" href="#"></a> -->
-            <!-- <a class="fa-steam" href="#"></a> -->
-            <!-- <a class="fa-list-ul" href="#"></a> -->
-            <!-- <a class="fa-lastfm" href="#"></a> -->
-            <!--<a class="fa-instagram" href="https://instagram.com/simpletext"></a>-->
-        </nav>
+    <div class="zoomIn animated" id="particles-js">
+        <canvas class='c'></canvas>
+        <canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1366" height="362"></canvas>
     </div>
-	<script src="js-home/main.js"></script>
+    <div class="zoomIn animated" id="content">
+        <div class="row">
+            <div id="round" class="bounce">
+                <img src="drochilo.svg" width="250" height="250"> 
+            </div>
+            <div id="name">
+                Drochilo Ltd.
+            </div>
+        </div>
+        </div>
+    </div>
 
+    <script src="js-home/main.js"></script>
+    <script src="js-home/particles-conf.js"></script>
+    <script src="js-home/cumshow.js"></script>
 
 </body>
 </html>
