--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <link href="styles-home/main.css" rel="stylesheet">
     <script src="js-home/particles.js"></script>
+    <script src="js-home/Clock.js"></script>
 </head>
 <body>
+    <script>
+        setInterval(myClock, 1000); //ставим выполнение данной функции каждую секунду  
+    </script>
     <div class="zoomIn animated" id="particles-js">
         <canvas class='c'></canvas>
         <canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1366" height="362"></canvas>
@@ -19,6 +23,7 @@
             </div>
             <div id="name">
                 Drochilo Ltd.
+                <p style="font-weight:bold;">Текущее время сайта: <span id="siteTime"></span></p>
             </div>
         </div>
         </div>
